.home_social fixed.It was on max content and different on ios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,6 +340,7 @@ img {
 
 .home_social img {
   width: 20px;
+  height: 20px;
 }
 
 .home_social-link {
